Fix padding on mobile browsers

--- a/attendance-payment/style.css
+++ b/attendance-payment/style.css
@@ -243,7 +243,7 @@ section, footer {
 @media screen and (max-width:540px){
     .input-wrapper {
         max-width: 100%;
-        padding: 0.5em 0;
+        padding: 1em 0;
     }
 
     input[type="text"] {
